stellar-core/src/lang/snapshots/stellar_core__lang__parse__tests__empty.snap
---
source: stellar-core/src/lang/parse.rs
expression: parse(token_stream)
snapshot_kind: text
---
Ok(
    [],
)
